<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AgregarExpo">

    <EditText
        android:id="@+id/idTxT"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="@string/id"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/nombreTxT"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/descripcionTxt"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="@string/descripcion"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/estadoTxt"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="@string/estado"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/enviarBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:onClick="agregarExpo"
        android:text="@string/agregar" />



</LinearLayout>