<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:columnCount="3"
    android:rowCount="5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModificarExpo">

    <EditText
        android:id="@+id/nombreTxt"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="19dp"
        android:layout_column="0"
        android:layout_row="0"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/descripcionTxt"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="19dp"
        android:layout_column="0"
        android:layout_row="1"
        android:ems="10"
        android:hint="@string/descripcion"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/modificar"
        android:layout_column="0"
        android:layout_row="2"
        android:layout_columnSpan="0"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        android:text="@string/modificar"
        android:onClick="modificarExpo"
        />

    <Button
        android:id="@+id/eliminar"
        android:layout_column="0"
        android:layout_row="3"
        android:layout_columnSpan="0"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        android:text="@string/eliminar"
        android:onClick="eliminarExpo"
        />

</GridLayout>